see all button added

--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -4,5 +4,16 @@
   grid-gap: 10px;
 }
 .review-btn {
-  background-color: aqua;
+  background-color: #5da3fa;
+  padding: 10px;
+  border: 0;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+.review-btn:hover {
+  background-color: #ff9f4a;
+  cursor: grab;
+  letter-spacing: 1px;
+  transition: 0.7s;
+  text-transform: uppercase;
 }
