--- a/src/components/Notfound/Notfound.css
+++ b/src/components/Notfound/Notfound.css
@@ -1,7 +1,8 @@
 .title {
   font-size: 40px;
+  font-family: "Rubik Wet Paint", cursive;
 }
-img {
+.not-found img {
   margin-top: 10px;
   width: 600px;
   height: 400px;
